# bioma-npc

./: AGENTS.md  AUTHORS.txt  Cargo.toml  LICENSE  PROVENANCE.md  README.md
npc-engine-core/: Cargo.toml
npc-engine-core/benches/: mcts.rs
npc-engine-core/examples/capture/: constants.rs  domain.rs  main.rs  map.rs  state.rs
npc-engine-core/examples/capture/behavior/: agent.rs  mod.rs  world.rs
npc-engine-core/examples/capture/task/: capturing.rs  mod.rs  moving.rs  pick.rs  shoot.rs  world.rs
npc-engine-core/examples/ecosystem/: constants.rs  domain.rs  main.rs  map.rs  state.rs
npc-engine-core/examples/ecosystem/behavior/: animal.rs  carnivore.rs  herbivore.rs  mod.rs  world.rs
npc-engine-core/examples/ecosystem/task/: eat_grass.rs  eat_herbivore.rs  jump.rs  mod.rs  move.rs  world.rs
npc-engine-core/examples/learn/: behavior.rs  constants.rs  domain.rs  estimator.rs  main.rs  plot.py  state.rs
npc-engine-core/examples/learn/task/: collect.rs  left.rs  mod.rs  right.rs
npc-engine-core/examples/tic-tac-toe/: board.rs  domain.rs  main.rs  move.rs  player.rs
npc-engine-core/src/: active_task.rs  behavior.rs  config.rs  context.rs  domain.rs  edge.rs  lib.rs  mcts.rs  node.rs  state_diff.rs  task.rs  util.rs
npc-engine-core/tests/: branching_tests.rs  sanity_tests.rs  seeding_tests.rs  value_tests.rs
npc-engine-utils/: Cargo.toml
npc-engine-utils/src/: coord2d.rs  direction.rs  executor.rs  functional.rs  global_domain.rs  graphs.rs  lib.rs  neuron.rs  option_state_diff.rs
scenario-lumberjacks/: Cargo.toml  README.md  build.rs
scenario-lumberjacks-bevy/: Cargo.toml  README.md
scenario-lumberjacks-bevy/src/: analytics.rs  assets.rs  fitnesses.rs  hooks.rs  inventory.rs  lib.rs  main.rs  simulation.rs  util.rs
scenario-lumberjacks-bevy/src/behaviors/: human.rs
scenario-lumberjacks-bevy/src/metrics/: islands.rs  performance.rs
scenario-lumberjacks-bevy/src/tasks/: move.rs  wait.rs  water.rs
scenario-lumberjacks/src/: analytics.rs  assets.rs  config.rs  game.rs  graph.rs  heatmap.rs  hooks.rs  inventory.rs  lib.rs  lumberjacks_domain.rs  main.rs  screenshot.rs  simulation.rs  tilemap.rs  util.rs  world.rs
scenario-lumberjacks/src/behaviors/: lumberjack.rs
scenario-lumberjacks/src/metrics/: performance.rs
scenario-lumberjacks/src/tasks/: barrier.rs  chop.rs  plant.rs  refill.rs
