[package]
name = "bioma-npc-core"
version = "0.1.0"
authors = ["Sven Knobloch <knsven@student.ethz.ch>", "David Enderlin <daviden@student.ethz.ch>", "Aydin Faraji <afaraji@student.ethz.ch>", "Stéphane Magnenat <stephane.magnenat@inf.ethz.ch>"]
edition = "2021"
license-file = "../LICENSE"
description = "Core planning crate for bioma-npc, a fork of npc-engine designed for agentic MMOs."
repository = "https://github.com/BiomaAI/bioma-npc"
homepage = "https://github.com/BiomaAI/bioma-npc"
readme = "README.md"
keywords = ["MCTS", "AI", "multi-agent", "simulation", "game"]
categories = ["algorithms", "science", "simulation", "game-development"]
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "2.0.2"
serde = { version = "1", features = [ "derive" ] }
rand = "0.10"
rand_chacha = "0.10"
log = "0.4"
ordered-float = "5"
dot = { version = "0.1", optional = true }
palette = { version = "0.7", optional = true }
rustc-hash = "2.1.1"

[dev-dependencies]
bioma-npc-utils = { path = "../npc-engine-utils" }
env_logger = "0.11.9"
cached = "0.58"
bounded-integer = "0.6.1"
regex = "1"
nonmax = "0.5"
lazy_static = "1.5"
ansi_term = "0.12"
clearscreen = "4.0.5"
num-traits = { version = "0.2.19", default-features = false }
criterion = "0.8"

[features]
default = []
graphviz = [ "dot", "palette" ]

[[example]]
name = "tic-tac-toe"
required-features = ["graphviz"]

[[bench]]
name = "mcts"
harness = false
