[package]
name = "bioma-npc-utils"
version = "0.1.0"
authors = ["Sven Knobloch <knsven@student.ethz.ch>", "David Enderlin <daviden@student.ethz.ch>", "Stéphane Magnenat <stephane.magnenat@inf.ethz.ch>"]
edition = "2021"
license-file = "../LICENSE"
description = "Utility helpers for bioma-npc, a fork of npc-engine designed for agentic MMOs."
repository = "https://github.com/BiomaAI/bioma-npc"
homepage = "https://github.com/BiomaAI/bioma-npc"
readme = "README.md"
keywords = ["MCTS", "AI", "multi-agent", "simulation", "game"]
categories = ["algorithms", "science", "simulation", "game-development"]
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bioma-npc-core = { version = "0.1", path = "../npc-engine-core", features = ["graphviz"] }
log = "0.4"
ansi_term = "0.12"
rand = "0.10"
serde = { version = "1", features = [ "derive" ] }

[dev-dependencies]
env_logger = "0.11.9"
