[package]
name = "lumberjacks"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
description = "Bevy-powered lumberjacks scenario bundled with bioma-npc."
repository = "https://github.com/BiomaAI/bioma-npc"
homepage = "https://github.com/BiomaAI/bioma-npc"
readme = "README.md"
keywords = ["MCTS", "AI", "multi-agent", "simulation", "bevy"]
categories = ["algorithms", "science", "simulation", "game-development"]
rust-version = "1.94"

[dependencies]
bevy = "0.18.1"
clap = "^4"
image = "~0.25"
log = "~0.4"
num-traits = "*"
rand = "~0.10"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
web-sys = "0.3.91"
bioma-npc-core = { version = "0.1", path = "../npc-engine-core" }
bioma-npc-utils = { version = "0.1", path = "../npc-engine-utils" }

[lib]
path = "./src/lib.rs"

[[bin]]
name = "lumberjacks"
path = "./src/main.rs"

[[bin]]
name = "lumberjacks-experiment"
path = "./src/bin/experiment.rs"
